--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,10 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    android:orientation="vertical">
 
     <TextView
-        android:text="haha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        style="@style/tv_title"
+        android:text="主界面"
+         />
+
+    <com.soleil.mobileguard.view.MyTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="marquee"
+
+        android:singleLine="true"
+        android:text="生活就像海洋，只有意志坚强的人才能到达彼岸...生活就像海洋，只有意志坚强的人才能到达彼岸..."
+        android:textSize="16sp"/>  //单行滑动要用singleLine 而不能用maxline
+
+    <GridView
+        android:id="@+id/gv_home_menus"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#00000000"
+        android:listSelector="@drawable/button"
+        android:numColumns="3"
+        android:paddingTop="10dp"
+        android:verticalSpacing="10dp" />
 </LinearLayout>
