--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,14 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+
+    <style name="tv_title">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">65dp</item>
+        <item name="android:background">@color/lightGreen</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">24sp</item>
+
+
+    </style>
 </resources>
