--- a/app/src/main/res/drawable/bt_selector.xml
+++ b/app/src/main/res/drawable/bt_selector.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/btn_green_normal"
+
+    <item android:drawable="@drawable/btn_green_pressed"
         android:state_pressed="true"
         /> <!-- pressed -->
 
-    <item android:drawable="@android:color/transparent" /> <!-- default -->
+    <item android:drawable="@drawable/btn_green_normal" /> <!-- default -->
 </selector>
