--- a/app/src/main/res/layout/activity_settingcenter.xml
+++ b/app/src/main/res/layout/activity_settingcenter.xml
@@ -11,6 +11,7 @@
         android:text="设置中心" />
 
     <com.soleil.mobileguard.view.SettingCenterView
+        android:id="@+id/scv_setting_center_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         sinjon:content="自动更新已经关闭-自动更新已经打开"
