--- a/app/src/main/res/layout/item_telsmssafe_listview.xml
+++ b/app/src/main/res/layout/item_telsmssafe_listview.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/tv_clickstyle"
+    android:clickable="true"
     android:padding="0dp">
 
     <TextView
@@ -30,15 +31,16 @@
 
     <!--android:layout_toRightOf="@id/tv_setting_center_auto_update"-->
     <ImageView
+
         android:id="@+id/iv_telsmssafe_listview_item_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/iv_delete_selector"
+        android:layout_marginRight="10dp"
+        android:clickable="false"
 
-        android:clickable="false" />
+        android:src="@drawable/iv_delete_selector" />
 
     <View
         android:layout_width="match_parent"
