--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
 
 
     <style name="tv_title">
+        <item name="android:textColor">#000000</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">65dp</item>
         <item name="android:background">@color/lightGreen</item>
