--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,5 +31,14 @@
         <item name="android:textColor">@color/textColorPrimaryDark</item>
     </style>
 
+    <style name="Soleil_Progress_Horizontal">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:progressDrawable">@drawable/progress_horizontal</item>
+
+        <item name="android:minHeight">20dip</item>
+        <item name="android:maxHeight">20dip</item>
+
+    </style>
+
 
 </resources>
